...
enum TabType {
	case standings, games, players

	var title: String {
		switch self {
		case .standings: return "Standings"
		case .games: return "Games"
		case .players: return "Players"
		}
	}

	private var imageName: String {
		return "Tabs/\(self.title)"
	}
...
