...

		return TableSection(key: "Scores", rows: rows)
	}

	static func playsSection(players: [Player], plays: [GamePlay], actionable: GameDetailsActionable) -> TableSection {
		var rows: [CellConfigType] = [
			Cells.sectionHeader(key: "MostRecent", title: "Most Recent Plays", action: "View All") { [weak actionable] in
				actionable?.showPlays(players: [])
			},
		]

		var lastDatePlayed: Date?
		plays.prefix(3).forEach {
...
